--- a/index.html
+++ b/index.html
@@ -6854,7 +6854,7 @@ function adobeExperienceCloudDebuggerAuditorTestsExecutor(callback) {
 
                                     <h3 style="font-size: 45px;">Come and Catch Fire</h3>
 
-                                    <div style="text-align: left; position: absolute; max-width: 1044px; width: 1000px; left: calc(50% - 522px); margin-top: 4em; font-size: 24px;">The name ‘Bonfire’ comes from the idea that if one log is on fire, when others are placed beside it, they can’t help but ignite.<br/>Bonfire lights a fire in you to grow and succeed that's fueled by the group.</div>
+                                    <div style="position: absolute; max-width: 1044px; width: 1000px; left: calc(50% - 522px); margin-top: 4em; font-size: 24px;">The name ‘Bonfire’ comes from the idea that if one log is on fire, when others are placed beside it, they can’t help but ignite.<br/>Bonfire lights a fire in you to grow and succeed that's fueled by the group.</div>
 
                                     <!-- width: 2033px; height: 1143.56px; -->
 
